# invoice-maid

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  docker-compose.override.yml.example  docker-compose.yml
backend/: .coveragerc  .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_v020_audit_and_corrections.py  0003_v040_classifier_tier.py  0004_outlook_account_type.py  0005_backfill_oauth_token_path.py  0006_extraction_parse_metadata.py  0007_last_scan_uid_text.py  0008_manual_upload_pseudo_account.py  0009_llm_cache_expires_at.py  0010_users_and_sessions.py  0011_add_user_id_to_tenant_tables.py  0012_tighten_user_id_constraints.py  0013_migrate_files_to_user_subdirs.py  0014_seed_default_trusted_senders.py  0015_add_invoice_category.py  0016_add_scraper_account_fields.py  0017_rename_saas_to_overseas.py
backend/app/: config.py  database.py  deps.py  logging_config.py  main.py  middleware.py  rate_limiter.py
backend/app/api/: __init__.py  admin.py  ai_settings.py  auth.py  classifier_settings.py  downloads.py  email_accounts.py  invoices.py  scan.py  stats.py  test_helpers.py  views.py
backend/app/models/: __init__.py  app_settings.py  correction_log.py  email_account.py  extraction_log.py  invoice.py  llm_cache.py  saved_view.py  scan_log.py  user.py  user_session.py  webhook_log.py
backend/tests/: conftest.py  test_config.py  test_coverage_edges.py  test_database.py  test_deps.py  test_logging_config.py  test_main.py  test_migrations.py  test_scheduler.py
(+103 files in other folders)
